<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KotlinVariable">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/hijau1"
                android:padding="2dp"
                android:text="Operators"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/print_adalah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paragraph_operators1"
                android:textSize="15sp"></TextView>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/hijau1"
                android:padding="2dp"
                android:text="Arithmetic Operators"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:id="@+id/paragraph2"
                android:text="@string/paragraph_operators2"></TextView>

            <ImageView
                android:id="@+id/gambar1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/arit"></ImageView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/hijau1"
                android:padding="2dp"
                android:text="Assignment Operators"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:id="@+id/paragraph3"
                android:text="@string/paragraph_operators3"></TextView>

            <ImageView
                android:id="@+id/gambar2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:background="@drawable/assignment"></ImageView>
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/hijau1"
                android:padding="2dp"
                android:text="Comparison Operators"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:id="@+id/paragraph4"
                android:text="@string/paragraph_operators4"></TextView>

            <ImageView
                android:id="@+id/gambar3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/compare"></ImageView>
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/hijau1"
                android:padding="2dp"
                android:text="Logical Operators"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:id="@+id/paragraph5"
                android:text="@string/paragraph_operators5"></TextView>

            <ImageView
                android:id="@+id/gambar4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:background="@drawable/logic"></ImageView>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>



    <ImageView
        android:id="@+id/operators_to_print"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />


</androidx.constraintlayout.widget.ConstraintLayout>